# PicoCode

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  IMPROVEMENTS.md  OPTIMIZATION_NOTES.md  PYCHARM_INTEGRATION.md  README.md  REQUIREMENTS_VERIFICATION.md  REST_API.md  SECURITY.md  analyzer.py  config.py  copilot-instructions.md  db.py  example_client.py  external_api.py  logger.py  main.py  models.py  projects.py  pyproject.toml  smart_chunker.py
.github/workflows/: build-plugin.yml  kotlin-ci.yml
ai/: __init__.py  analyzer.py  analyzer_embedding_usage_example.py  embedding_client.py  llama_chunker.py  llama_embeddings.py  llama_integration.py  llama_retriever.py  llama_vector_store.py  openai.py  smart_chunker.py
ai/agents/: README.md  __init__.py  index_sync_agent.py
db/: __init__.py  connection.py  db_writer.py  models.py  operations.py  vector_operations.py
db_modules/: __init__.py
endpoints/: __init__.py  project_endpoints.py  query_endpoints.py  rate_limiter.py  web_endpoints.py
ide-plugins/: README.md  build.gradle.kts  gradlew  inspect_gradle_kotlin_versions.sh
ide-plugins/src/main/kotlin/com/picocode/: PicoCodeConfigurable.kt  PicoCodeSettings.kt  (+2 more)
plugin/: README.md
scripts/ci/: inspect_gradle_kotlin_versions.sh
services/: __init__.py  dependency_service.py  project_service.py  search_service.py
static/js/: main.js
templates/: index.html  index.html.backup
tests/: __init__.py  test_index_sync_agent.py
utils/: __init__.py  app_state.py  cache.py  config.py  file_watcher.py  logger.py  retry.py  simple_vector_store.py  utils.py
(+2 files in other folders)
