[project]
name = "picocode"
version = "0.1.0"
description = "Minimal local codebase analyzer with uv support, embeddings and simple web UI"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "fastapi>=0.85",
  "uvicorn>=0.18",
  "jinja2>=3.0",
  "requests>=2.25",
  "tomli>=2.0; python_version < '3.11'",
  "python-dotenv>=1.0",
  "openai>=2.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
