[project]
name = "picocode"
version = "0.2.0"
description = "Production-ready local RAG backend with per-project storage and PyCharm integration"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "fastapi>=0.85",
  "uvicorn>=0.18",
  "jinja2>=3.0",
  "requests>=2.25",
  "tomli>=2.0; python_version < '3.11'",
  "python-dotenv>=1.0",
  "openai>=2.2.0",
  "llama-index>=0.5.9",
  "sqliteai-vector>=0.9.51",
  "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "db*", "services*", "endpoints*"]
exclude = ["templates*"]
